--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://BEKMAL/github.io/vite-project",
+  "homepage": "https://BEKMAL/github.io/usereducer",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
